added second page and some js

--- a/luis branch/custom-bulma.css
+++ b/luis branch/custom-bulma.css
@@ -1,3 +1,7 @@
+:root{
+    --primary: #E08C28;
+}
+
 .navbar .navbar-brand {
     text-align: center;
     display: block;
@@ -8,3 +12,4 @@
   .navbar .navbar-brand .navbar-link {
     display: inline-block;
   }
+
