final bug fixes

--- a/assets/custom-bulma.css
+++ b/assets/custom-bulma.css
@@ -2,6 +2,10 @@
     --primary: #E08C28;
 }
 
+body{
+  overflow: hidden;
+}
+
 .navbar .navbar-brand {
     text-align: center;
     display: block;
